# panda_3d_animacion

./: README.md  pyproject.toml
panda3d_animacion/: main.py
